tests/invalid/runtime/unhandled_exception.pts
function main() : void {
    Exception e = Exception.clone();
    e.message = "boom";
    throw e;
}
